--- a/assets/highlight.css
+++ b/assets/highlight.css
@@ -1,24 +1,28 @@
 :root {
-    --light-hl-0: #000000;
-    --dark-hl-0: #D4D4D4;
+    --light-hl-0: #795E26;
+    --dark-hl-0: #DCDCAA;
     --light-hl-1: #000000;
-    --dark-hl-1: #C8C8C8;
-    --light-hl-2: #001080;
-    --dark-hl-2: #9CDCFE;
-    --light-hl-3: #0070C1;
-    --dark-hl-3: #4FC1FF;
-    --light-hl-4: #098658;
-    --dark-hl-4: #B5CEA8;
-    --light-hl-5: #0000FF;
-    --dark-hl-5: #569CD6;
-    --light-hl-6: #267F99;
-    --dark-hl-6: #4EC9B0;
-    --light-hl-7: #008000;
-    --dark-hl-7: #6A9955;
-    --light-hl-8: #795E26;
-    --dark-hl-8: #DCDCAA;
-    --light-hl-9: #A31515;
-    --dark-hl-9: #CE9178;
+    --dark-hl-1: #D4D4D4;
+    --light-hl-2: #A31515;
+    --dark-hl-2: #CE9178;
+    --light-hl-3: #CD3131;
+    --dark-hl-3: #F44747;
+    --light-hl-4: #0451A5;
+    --dark-hl-4: #9CDCFE;
+    --light-hl-5: #000000;
+    --dark-hl-5: #C8C8C8;
+    --light-hl-6: #001080;
+    --dark-hl-6: #9CDCFE;
+    --light-hl-7: #0070C1;
+    --dark-hl-7: #4FC1FF;
+    --light-hl-8: #098658;
+    --dark-hl-8: #B5CEA8;
+    --light-hl-9: #0000FF;
+    --dark-hl-9: #569CD6;
+    --light-hl-10: #267F99;
+    --dark-hl-10: #4EC9B0;
+    --light-hl-11: #008000;
+    --dark-hl-11: #6A9955;
     --light-code-background: #FFFFFF;
     --dark-code-background: #1E1E1E;
 }
@@ -34,6 +38,8 @@
     --hl-7: var(--light-hl-7);
     --hl-8: var(--light-hl-8);
     --hl-9: var(--light-hl-9);
+    --hl-10: var(--light-hl-10);
+    --hl-11: var(--light-hl-11);
     --code-background: var(--light-code-background);
 } }
 
@@ -48,6 +54,8 @@
     --hl-7: var(--dark-hl-7);
     --hl-8: var(--dark-hl-8);
     --hl-9: var(--dark-hl-9);
+    --hl-10: var(--dark-hl-10);
+    --hl-11: var(--dark-hl-11);
     --code-background: var(--dark-code-background);
 } }
 
@@ -62,6 +70,8 @@
     --hl-7: var(--light-hl-7);
     --hl-8: var(--light-hl-8);
     --hl-9: var(--light-hl-9);
+    --hl-10: var(--light-hl-10);
+    --hl-11: var(--light-hl-11);
     --code-background: var(--light-code-background);
 }
 
@@ -76,6 +86,8 @@
     --hl-7: var(--dark-hl-7);
     --hl-8: var(--dark-hl-8);
     --hl-9: var(--dark-hl-9);
+    --hl-10: var(--dark-hl-10);
+    --hl-11: var(--dark-hl-11);
     --code-background: var(--dark-code-background);
 }
 
@@ -89,4 +101,6 @@
 .hl-7 { color: var(--hl-7); }
 .hl-8 { color: var(--hl-8); }
 .hl-9 { color: var(--hl-9); }
+.hl-10 { color: var(--hl-10); }
+.hl-11 { color: var(--hl-11); }
 pre, code { background: var(--code-background); }
