--- a/assets/highlight.css
+++ b/assets/highlight.css
@@ -5,24 +5,30 @@
     --dark-hl-1: #D4D4D4;
     --light-hl-2: #A31515;
     --dark-hl-2: #CE9178;
-    --light-hl-3: #CD3131;
-    --dark-hl-3: #F44747;
-    --light-hl-4: #0451A5;
-    --dark-hl-4: #9CDCFE;
-    --light-hl-5: #000000;
-    --dark-hl-5: #C8C8C8;
-    --light-hl-6: #001080;
-    --dark-hl-6: #9CDCFE;
-    --light-hl-7: #0070C1;
-    --dark-hl-7: #4FC1FF;
-    --light-hl-8: #098658;
-    --dark-hl-8: #B5CEA8;
+    --light-hl-3: #008000;
+    --dark-hl-3: #6A9955;
+    --light-hl-4: #800000;
+    --dark-hl-4: #808080;
+    --light-hl-5: #800000;
+    --dark-hl-5: #569CD6;
+    --light-hl-6: #000000FF;
+    --dark-hl-6: #D4D4D4;
+    --light-hl-7: #E50000;
+    --dark-hl-7: #9CDCFE;
+    --light-hl-8: #0000FF;
+    --dark-hl-8: #CE9178;
     --light-hl-9: #0000FF;
     --dark-hl-9: #569CD6;
-    --light-hl-10: #267F99;
-    --dark-hl-10: #4EC9B0;
-    --light-hl-11: #008000;
-    --dark-hl-11: #6A9955;
+    --light-hl-10: #0070C1;
+    --dark-hl-10: #4FC1FF;
+    --light-hl-11: #001080;
+    --dark-hl-11: #9CDCFE;
+    --light-hl-12: #000000;
+    --dark-hl-12: #C8C8C8;
+    --light-hl-13: #098658;
+    --dark-hl-13: #B5CEA8;
+    --light-hl-14: #267F99;
+    --dark-hl-14: #4EC9B0;
     --light-code-background: #FFFFFF;
     --dark-code-background: #1E1E1E;
 }
@@ -40,6 +46,9 @@
     --hl-9: var(--light-hl-9);
     --hl-10: var(--light-hl-10);
     --hl-11: var(--light-hl-11);
+    --hl-12: var(--light-hl-12);
+    --hl-13: var(--light-hl-13);
+    --hl-14: var(--light-hl-14);
     --code-background: var(--light-code-background);
 } }
 
@@ -56,6 +65,9 @@
     --hl-9: var(--dark-hl-9);
     --hl-10: var(--dark-hl-10);
     --hl-11: var(--dark-hl-11);
+    --hl-12: var(--dark-hl-12);
+    --hl-13: var(--dark-hl-13);
+    --hl-14: var(--dark-hl-14);
     --code-background: var(--dark-code-background);
 } }
 
@@ -72,6 +84,9 @@
     --hl-9: var(--light-hl-9);
     --hl-10: var(--light-hl-10);
     --hl-11: var(--light-hl-11);
+    --hl-12: var(--light-hl-12);
+    --hl-13: var(--light-hl-13);
+    --hl-14: var(--light-hl-14);
     --code-background: var(--light-code-background);
 }
 
@@ -88,6 +103,9 @@
     --hl-9: var(--dark-hl-9);
     --hl-10: var(--dark-hl-10);
     --hl-11: var(--dark-hl-11);
+    --hl-12: var(--dark-hl-12);
+    --hl-13: var(--dark-hl-13);
+    --hl-14: var(--dark-hl-14);
     --code-background: var(--dark-code-background);
 }
 
@@ -103,4 +121,7 @@
 .hl-9 { color: var(--hl-9); }
 .hl-10 { color: var(--hl-10); }
 .hl-11 { color: var(--hl-11); }
+.hl-12 { color: var(--hl-12); }
+.hl-13 { color: var(--hl-13); }
+.hl-14 { color: var(--hl-14); }
 pre, code { background: var(--code-background); }
